# deepresearch

./: .coverage  .dockerignore  .gitignore  .kodehold-state  =1.20  CHANGELOG.md  CHANGES.md  Dockerfile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/adr/: ADR-0001-multi-agent-research-architecture.md  ADR-0002-agent-personality-and-model-selection.md  ADR-0003-web-frontend-and-multi-session.md  ADR-0004-test-findings-and-architecture-fixes.md  ADR-0005-auto-install-and-discover-local-llm-backends.md  ADR-0006-web-search-and-tool-calling.md  ADR-0007-clarification-protocol-and-refinement.md  ADR-0008-dashboard-enhancements.md  ADR-0009-cicd-pipeline-and-distribution.md  ADR-0010-dynamic-research-rounds.md  ADR-0011-concurrency-limits-and-web-search-throttling.md  ADR-0012-replace-ddgs-with-searxng.md  ADR-0013-searxng-optimization.md  ADR-0014-enforce-time-budget-and-correct-labels.md  ADR-0015-fix-json-parsing-and-topic-drift.md  ADR-0019-frontend-reactivity-strategy.md  (+5 more)
npm/: package.json
prompts/: __init__.py  research.yaml  scribe.yaml
scripts/: benchmark-pipeline.sh
tests/: conftest.py  test_agents.py  test_collaboration.py  test_config.py  test_integration.py  test_llamacpp.py  test_llm_client.py  test_local_backends.py  test_models.py  test_orchestrator.py  test_pdf_generation.py  test_pipeline.py  test_polish.py  test_providers.py  test_system.py  test_tool_cache.py  test_tool_content_fetcher.py  test_tool_parser.py  test_tool_providers.py  test_tool_registry.py  test_tool_time_filter.py  test_tools.py  test_web.py
(+115 files in other folders)
