[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepresearch"
version = "0.9.0"
description = "Multi-agent AI research system for multi-perspective research papers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "KodeHold"},
]

dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.27.0",
    "ddgs>=8.0.0",
]

[project.scripts]
deepresearch = "deepresearch.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepresearch*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
